--- a/tasks/prepare_docker.yml
+++ b/tasks/prepare_docker.yml
@@ -1,15 +1,8 @@
 ---
-- name: Hello World!
+- name: Prepare Docker!
   hosts: localhost
  
   tasks:
-  - name: Hello World!
-    shell: echo "Hi! Tower is working."
-  
-  - name: Create user Cloud-User
-    user:
-      name: "cloud-user"
-
   - name: Setting user
     shell: "usermod -aG docker cloud-user"
 
